--- a/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
+++ b/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
@@ -115,20 +115,20 @@
                                     <div class="br-list" tabindex="0">
                                       <div class="br-item" tabindex="-1">
                                         <div class="br-radio">
-                                          <input id="rb0" type="radio" name="estados-simples" value="rb0"/>
-                                          <label class="text-center" for="rb0">9%</label>
+                                          <input id="rb-credito-proprio-9perc" type="radio" name="estados-simples" value="rb-credito-proprio-9perc"/>
+                                          <label class="text-center" for="rb-credito-proprio-9perc">9%</label>
                                         </div>
                                       </div>
                                       <div class="br-item" tabindex="-1">
                                         <div class="br-radio">
-                                          <input id="rb1" type="radio" name="estados-simples" value="rb1"/>
-                                          <label class="text-center" for="rb1">15%</label>
+                                          <input id="rb-credito-proprio-15perc" type="radio" name="estados-simples" value="rb-credito-proprio-15perc"/>
+                                          <label class="text-center" for="rb-credito-proprio-15perc">15%</label>
                                         </div>
                                       </div>
                                       <div class="br-item" tabindex="-1">
                                         <div class="br-radio">
-                                          <input id="rb2" type="radio" name="estados-simples" value="rb2"/>
-                                          <label class="text-center" for="rb2">20%</label>
+                                          <input id="rb-credito-proprio-20perc" type="radio" name="estados-simples" value="rb-credito-proprio-20perc"/>
+                                          <label class="text-center" for="rb-credito-proprio-20perc">20%</label>
                                         </div>
                                       </div>
                                     </div>
@@ -153,6 +153,7 @@
                 <!--FIM DA SECAO CREDITOS PROPRIOS-->
 
 
+
                 <!--SECAO CREDITOS DE TERCEIROS-->
                 <div id="terceiros" style="margin-top: 85px;">
                   <div class="text-center">
@@ -161,28 +162,7 @@
                     <h4>Exclusivo para Pessoa Jurídica</h4>
                     <h4>Nos termos da legislação, o uso dos créditos de PF/BCN é limitado a 50% da dívida consolidada</h4>
                   </div>
-                  <div class="br-table">
-                    <table id="tabelaTerceiros" class="table container text-center">
-                        <thead>
-                            <tr>
-                                <th id="tituloCnpjCreditoTerceiros" class="text-center text-up-01 col-2">CNPJ</th>
-                                <th id="tituloTipoCreditoTerceiros" class="text-center text-up-01 col-2">Tipo</th>
-                                <th id="tituloMontanteCreditoTerceiros" class="text-center text-up-01 col-2">Montante (R$)</th>
-                                <th id="tituloAliquotaCreditoTerceiros" class="text-center text-up-01 col-1">Alíquota</th>
-                                <th id="tituloValorCreditoTerceiros" class="text-center text-up-01 col-2">Valor (R$)</th>
-                                <th id="tituloDataEntregaCreditoTerceiros" class="text-center text-up-01 col-2">Data entrega ECF</th>
-                                <th id="tituloAcoes" class="text-center text-up-01 col-1">Ações</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tabelaTerceirosBody"></tbody>
-                        <!-- A tabela será preenchida dinamicamente com JavaScript -->
-                    </table>
-
-                    <!--BOTÕES ADICIONAR REGISTRO-->
-                    <div class="text-center my-5">
-                        <button id="btnIncluirCreditoTerceiros" class="br-button secondary mr-3">Incluir novo crédito</button>
-                    </div>
-                  </div>
+                  <br-tabela_creditos_terceiros></br-tabela_creditos_terceiros>
                 </div>
 
                 <!--SECAO DE PRECATORIOS-->
@@ -190,27 +170,7 @@
                   <div class="text-center">
                     <h2>Precatórios</h2>
                   </div>
-                  <div class="br-table">
-                    <table id="tabelaPrecatorios" class="table container text-center">
-                        <thead>
-                            <tr>
-                                <th id="tituloNumeroPrecatorio" class="text-center text-up-01">Nº do precatório</th>
-                                <th id="tituloNumeroRequisicaoPagamentoPrecatorio" class="text-center text-up-01">Nº da requisição de pagamento</th>
-                                <th id="tituloDataRequisicaoPrecatorio" class="text-center text-up-01">Data da requisição</th>
-                                <th id="tituloDataVencimentoPrecatorio" class="text-center text-up-01">Vencimento</th>
-                                <th id="tituloValorPrecatorio" class="text-center text-up-01">Valor (R$)</th>
-                                <th class="text-center text-up-01">Ações</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tabelaPrecatoriosBody"></tbody>
-                        <!-- A tabela será preenchida dinamicamente com JavaScript -->
-                    </table>
-
-                    <!--BOTÕES ADICIONAR REGISTRO-->
-                    <div class="text-center my-5 esconder">
-                        <button id="btnIncluirNovoPrecatorio" class="br-button secondary mr-3">Incluir novo precatório</button>
-                    </div>
-                  </div>
+                  <br-tabela-precatorios></br-tabela-precatorios>
                 </div>
 
                 <!--BOTAO GERAR PDF-->
@@ -370,7 +330,8 @@
     <script src="./js/main.js" type="module"></script>
     <script src="./bibliotecas/govbr-ds/core.js" type="module"></script>
     <script src="./bibliotecas/govbr-ds/core.min.js" type="module"></script>
-    <script src="./tabela_debitos/tabela_debitos.js" type="module"></script>     
+    <script src="./tabela_debitos/tabela_debitos.js" type="module"></script>
+    <script src="./tabela_creditos_proprios/tabela_creditos_proprios.js" type="module"></script>     
 
   </body>
 </html>
