Fazendo o select funcionar na tabela de créditos

--- a/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
+++ b/src/html/autorregularizacao/autorregularizacao_novo_padrao.html
@@ -250,6 +250,7 @@
     <script src="./tabela_debitos/tabela_debitos.js" type="module"></script>
     <script src="./tabela_creditos_proprios/tabela_creditos_proprios.js" type="module"></script> 
     <script src="./tabela_creditos_terceiros/tabela_creditos_terceiros.js" type="module"></script>     
+    <script src="./tabela_precatorios/tabela_precatorios.js" type="module"></script>     
 
   </body>
 </html>
