--- a/src/html/autorregularizacao/componentes/select_aliquota_creditos_proprios/select_aliquotas_creditos_proprios.html
+++ b/src/html/autorregularizacao/componentes/select_aliquota_creditos_proprios/select_aliquotas_creditos_proprios.html
@@ -2,7 +2,7 @@
 <template id="template_br_item_aliquota_creditos_proprios">
     <div class="br-item" tabindex="-1" id="br_item_aliquota_creditos_proprios">
         <div class="br-radio">
-            <input id="input_aliquota_creditos_proprios"  type="radio" name="codigos-receita" value="input_aliquota_creditos_proprios"/>
+            <input id="input_aliquota_creditos_proprios"  type="radio" name="aliquota-creditos-proprios" value="input_aliquota_creditos_proprios"/>
             <label for="input_aliquota_creditos_proprios">9%</label>
         </div>	
     </div>
