--- a/src/html/autorregularizacao/componentes/select_creditos_terceiros/select_creditos_terceiros.html
+++ b/src/html/autorregularizacao/componentes/select_creditos_terceiros/select_creditos_terceiros.html
@@ -3,7 +3,7 @@
     <div class="br-item" tabindex="-1" id="br_item_credito_terceiros">
         <div class="br-radio">
           <input id="input_credito_terceiros" type="radio" name="credito_terceiros" value="input_credito_terceiros"/>
-          <label for="input_credito_terceiros">0000</label>
+          <label for="input_credito_terceiros">Selecione</label>
         </div>
       </div>
 </template>
