--- a/src/html/autorregularizacao/tabela_creditos_terceiros/tabela_creditos_terceiros.html
+++ b/src/html/autorregularizacao/tabela_creditos_terceiros/tabela_creditos_terceiros.html
@@ -6,40 +6,8 @@
       </div>
     </td>
     <td id="tipoCreditoTerceiros" class="col-sm-1 col-md-2 col-lg-1 mb-3 p-0">
-      <div class="br-select">
-          <div class="br-input">
-            <input id="select-simple" class="text-center" type="text" placeholder="Selecione o tipo"/>
-            <button class="br-button" type="button" aria-label="Exibir lista" tabindex="-1" data-trigger="data-trigger"><i class="fas fa-angle-down" aria-hidden="true"></i>
-            </button>
-          </div>
-          <div class="br-list" tabindex="0">
-            <div class="br-item" tabindex="-1">
-              <div class="br-radio">
-                <input id="rb0" type="radio" name="estados-simples" value="rb0"/>
-                <label for="rb0">Acre</label>
-              </div>
-            </div>
-            <div class="br-item" tabindex="-1">
-              <div class="br-radio">
-                <input id="rb1" type="radio" name="estados-simples" value="rb1"/>
-                <label for="rb1">Alagoas</label>
-              </div>
-            </div>
-            <div class="br-item" tabindex="-1">
-              <div class="br-radio">
-                <input id="rb2" type="radio" name="estados-simples" value="rb2"/>
-                <label for="rb2">Amapá</label>
-              </div>
-            </div>
-            <div class="br-item" tabindex="-1">
-              <div class="br-radio">
-                <input id="rb3" type="radio" name="estados-simples" value="rb3"/>
-                <label for="rb3">Amazonas</label>
-              </div>
-            </div>
-          </div>
-        </div>    
-      </td>
+      <select-creditos-terceiros></select-creditos-terceiros>    
+    </td>
     <td id="montanteCreditoTerceiros" class="col-sm-1 col-md-2 col-lg-2 mb-3 p-0">
       <div class="br-input">
         <input class="text-center"  style="font-size: 13px;"  type="number" placeholder="R$"/>
@@ -61,7 +29,7 @@
       </div>
     </td>
     <td id="acoes" class="col-sm-1 col-md-2 col-lg-1 mb-3 text-center">
-      <button class="br-button circle secondary small" onclick="excluirLinha(this)" id="btnExcluirLinha" type="button" aria-label="Ícone ilustrativo">
+      <button class="br-button circle secondary small" id="btnExcluirLinha" type="button" aria-label="Ícone ilustrativo">
         <div class="menu-item divider" href="#" role="treeitem">
           <span class="icon">
             <i class="fa fa-trash" aria-hidden="true"></i>
