Adicionando o select estilo gov br - criado componententes

--- a/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
+++ b/src/html/siscaer/componentes/dados_pessoais/dados_pessoais.html
@@ -84,13 +84,14 @@
             </div>
             <div class="col-md-10 mb-3">
               <div class="br-input">
-                <label for="sexo">Sexo: </label><br>
+                <select-sexo-dados-pessoais></select-sexo-dados-pessoais>
+                <!--<label for="sexo">Sexo: </label><br>
                 <select id="sexo" required>
                   <option value="" disabled selected>Selecione</option>
                   <option value="feminino">Feminino</option>
                   <option value="masculino">Masculino</option>
                   <option value="outro">Outro</option>
-                </select>
+                </select> -->
               </div>
             </div>
 
