Fazendo o select da tabela créditos próprios funcionar - Caminho relativo

--- a/src/html/autorregularizacao/componentes/select_aliquota_creditos_proprios/select_aliquotas_creditos_proprios.html
+++ b/src/html/autorregularizacao/componentes/select_aliquota_creditos_proprios/select_aliquotas_creditos_proprios.html
@@ -10,7 +10,7 @@
 
 <div class="br-select">
     
-    <div class="br-input">
+    <div class="br-input small">
       <input id="select-simple" class="text-center" type="text" placeholder="Selecione"/>
       <button class="br-button" type="button" aria-label="Exibir lista" tabindex="-1" data-trigger="data-trigger"><i class="fas fa-angle-down" aria-hidden="true"></i>
       </button>
