Ícone da lixeira e adição de select com base no original

--- a/src/html/autorregularizacao/tabela_creditos_terceiros/tabela_creditos_terceiros.html
+++ b/src/html/autorregularizacao/tabela_creditos_terceiros/tabela_creditos_terceiros.html
@@ -14,9 +14,7 @@
       </div>
     </td>
     <td id="aliquotaCreditoTerceiros" class="col-sm-1 col-md-2 col-lg-2 mb-3 p-0">
-      <div class="br-input">
-        <input class="text-center" type="number" placeholder="%"/>
-      </div>
+      <select-aliquotas-creditos-terceiros></select-aliquotas-creditos-terceiros>
     </td>
     <td id="valorCreditoTerceiros" class="col-sm-1 col-md-2 col-lg-1 mb-3 p-0">
       <div class="br-input">
