--- a/src/html/autorregularizacao/componentes/select_codigos_receita/select_codigos_receita.html
+++ b/src/html/autorregularizacao/componentes/select_codigos_receita/select_codigos_receita.html
@@ -3,7 +3,7 @@
     <div class="br-item" tabindex="-1" id="br_item_codigo_receita">
         <div class="br-radio">
             <input id="input_codigo_receita"  type="radio" name="codigos-receita" value="input_codigo_receita"/>
-            <label for="input_codigo_receita">0000</label>
+            <label class="text-center" for="input_codigo_receita">0000</label>
         </div>	
     </div>
 </template>
