Criando um select base e colocando os existentes no padrão

--- a/src/html/autorregularizacao/tabela_creditos_proprios/tabela_creditos_proprios.html
+++ b/src/html/autorregularizacao/tabela_creditos_proprios/tabela_creditos_proprios.html
@@ -16,22 +16,22 @@
                     Prejuízo Fiscal (PF)
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input id="validarValor" class="text-center p-1 text-down-01" type="number" placeholder="R$" required="true" contenteditable="true">
                     </div>
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input class="text-center" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="25%" disabled style="opacity: 1;">
                     </div>
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input id="validarValor" class="text-center p-1 text-down-01" type="number" placeholder="R$" contenteditable="true" required="true">
                     </div>
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input id="validacaoData" class="text-center" style="font-size: 15px;" type="date" contenteditable="true" required="true" placeholder="dd/mm/aaaa">
                     </div>
                 </td>
@@ -41,7 +41,7 @@
                     Base de Cálculo Negativa (BCN) da CSLL
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input type="number" class="text-center p-1 text-down-01" placeholder="R$" contenteditable="true" required="true" id="validarValor">
                     </div>
                 </td>
@@ -49,12 +49,12 @@
                     <select-aliquotas-creditos-proprios></select-aliquotas-creditos-proprios>
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input type="number" class="text-center p-1 text-down-01" placeholder="R$" contenteditable="true" required="true" id="validarValor">
                     </div>
                 </td>
                 <td class="text-center p-1">
-                    <div class="br-input small">
+                    <div class="br-input ">
                         <input id="validacaoData" class="text-center" style="font-size: 15px;" type="date" contenteditable="true" required="true" placeholder="dd/mm/aaaa">
                     </div>
                 </td>
