--- a/src/html/autorregularizacao/tabela_creditos_terceiros/tabela_creditos_terceiros.html
+++ b/src/html/autorregularizacao/tabela_creditos_terceiros/tabela_creditos_terceiros.html
@@ -40,7 +40,7 @@
 </template>
 
 <div class="br-table">
-  <table id="tabelaTerceiros" class="table container text-center">
+  <table id="tabelaCreditosTerceiros" class="table container text-center">
       <thead>
           <tr>
               <th id="tituloCnpjCreditoTerceiros" class="text-center text-up-01 col-2">CNPJ</th>
