--- a/src/html/remessas_internacionais/componentes/dados_remessas/dados_remessas.html
+++ b/src/html/remessas_internacionais/componentes/dados_remessas/dados_remessas.html
@@ -1,10 +1,10 @@
-<fieldset id="remessas" class="fieldset-border">
+<fieldset id="remessas-desktop" class="fieldset-border">
   <legend class="legend-border" style="color: #155BCB; justify-content: right;">
     <span class="icon" style="color: #155BCB; justify-content: right;">
-      <i class="fa fa-user-tie" aria-hidden="true"></i>
-    </span>Tripulação
+      <i class="fa fa-filter-circle-dollar" aria-hidden="true"></i>
+    </span>Suas remessas
   </legend>
-  <template id="remessa">
+  <template id="remessa-desktop">
     <div class="row mt-5">
       <div class="col-sm">
         <fieldset>
@@ -13,13 +13,13 @@
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
                 <label for="valor-remessa">Valor da remessa</label>
-                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <input class="valor-remessa-desktop" id="valor-remessa-desktop" placeholder="Dólar (US$)" type="text" />
               </div>  
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="valor-total-remessa">Valor total</label>
-                <input class="input valor-total-remessa" id="valor-total-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label for="valor-total-remessa">Alíquota</label>
+                <input class="aliquota-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>  
             </div>
           </div>
@@ -31,14 +31,33 @@
           <div class="row coluna-row">
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="aliquota-remessa">Alíquota</label>
-                <input class="input aliquota-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="25%" disabled style="opacity: 1;">
+                <label for="aliquota-remessa">II Inicial</label>
+                <input class="iiinicial-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div> 
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="surname">Sobrenome</label>
-                <input class="input" id="surname" type="text" placeholder="Placeholder"/>
+                <label for="surname">Desconto</label>
+                <input class="desconto-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
+              </div>
+            </div>
+          </div>
+        </fieldset>
+      </div>
+      <div class="col-sm">
+        <fieldset>
+          <!--<legend>Outros Dados (Legend)</legend>-->
+          <div class="row coluna-row">
+            <div class="coluna-input col-md-6 mb-3">
+              <div class="br-input">
+                <label for="aliquota-remessa">II Final</label>
+                <input class="iifinal-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
+              </div> 
+            </div>
+            <div class="coluna-input col-md-6 mb-3">
+              <div class="br-input">
+                <label for="surname">Soma</label>
+                <input class="soma-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>
             </div>
           </div>
@@ -51,13 +70,13 @@
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
                 <label for="aliquota-remessa">ICMS</label>
-                <input class="input icms-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="17%" disabled style="opacity: 1;">
+                <input class="icms-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="17%" disabled style="opacity: 1;">
               </div> 
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="surname">Desconto</label>
-                <input class="input" id="surname" type="text" placeholder="Placeholder"/>
+                <label for="surname">Valor total</label>
+                <input class="total-remessa-desktop" id="total-remessa-desktop" type="text" placeholder="Dólar (US$)"/>
               </div>
             </div>
           </div>
@@ -84,118 +103,67 @@
   </button>
 </fieldset>
 
-
-<div class="row">
-  <div class="col-sm">
-    <fieldset>
-      <div class="row coluna-row">
-        <div class="coluna-input col-md-6 mb-3">
-          <div class="br-input"><label for="name">Nome</label>
-            <input class="teste-input" id="name" value="Fulano (input preenchido)" type="text" />
-          </div>
-        </div>
-        <div class="coluna-input col-md-6 mb-3">
-          <div class="br-input">
-            <label for="surname">Sobrenome</label>
-            <input class="teste-input" id="surname" type="text" placeholder="Placeholder"/>
-          </div>
-        </div>
-      </div>
-    </fieldset>
-  </div>
-  <div class="col-sm">
-    <fieldset>
-      <div class="row coluna-row">
-        <div class="coluna-input col-md-6 mb-3">
-          <div class="br-input"><label for="name">CPF</label>
-            <input class="teste-input" id="name" value="Fulano (input preenchido)" type="text" />
-          </div>
-        </div>
-        <div class="coluna-input col-md-6 mb-3">
-          <div class="br-input">
-            <label for="surname">Sei lá o que</label>
-            <input class="teste-input" id="surname" type="text" placeholder="Placeholder"/>
-          </div>
-        </div>
-      </div>
-    </fieldset>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm">
-    <fieldset>
-      <legend>Nome Completo (Legend)</legend>
-      <div class="row coluna-row">
-        <div class="col-md-6 mb-3">
-          <div class="br-input"><label for="name">Nome</label>
-            <input class="teste-input" id="name" value="Fulano (input preenchido)" type="text" />
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="br-input">
-            <label for="surname">Sobrenome</label>
-            <input class="teste-input" id="surname" type="text" placeholder="Placeholder"/>
-          </div>
-        </div>
-      </div>
-      <div class="row coluna-row">
-        <div class="col-md-6 mb-3">
-          <div class="br-input"><label for="name">CPF</label>
-            <input class="teste-input" id="name" value="Fulano (input preenchido)" type="text" />
-          </div>
-        </div>
-        <div class="col-md-6 mb-3">
-          <div class="br-input">
-            <label for="surname">Sei lá o que</label>
-            <input class="teste-input" id="surname" type="text" placeholder="Placeholder"/>
-          </div>
-        </div>
-      </div>
-    </fieldset>
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="row">
+<fieldset id="remessas-mobile" class="fieldset-border">
+  <legend class="legend-border" style="color: #155BCB; justify-content: right;">
+    <span class="icon" style="color: #155BCB; justify-content: right;">
+      <i class="fa fa-filter-circle-dollar" aria-hidden="true"></i>
+    </span>Suas remessas
+  </legend>
+  <template id="remessa-mobile">
+    <div class="row mt-5">
       <div class="col-sm">
-          <fieldset>
-              <legend>Nome Completo (Legend)</legend>
-              <div class="row teste-row">
-                  <div class="col-md-6 mb-3">
-                      <div class="br-input">
-                          <label for="name">Nome</label>
-                          <input class="teste-input" id="name" value="Fulano (input preenchido)" type="text" />
-                      </div>
-                  </div>
-                  <div class="col-md-6 mb-3">
-                      <div class="br-input">
-                          <label for="surname">Sobrenome</label>
-                          <input class="teste-input" id="surname" type="text" placeholder="Placeholder"/>
-                      </div>
-                  </div>
+        <fieldset>
+          <!--<legend>Valor (Legend)</legend>-->
+          <div class="row coluna-row">
+            <div class="coluna-input col-12 col-md-6 mb-3">
+              <div class="br-input">
+                <label class="titulo-bloco" for="valor-remessa">Valor da remessa 1</label>
+                <input class="valor-remessa-mobile" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
               </div>
-          </fieldset>
-      </div>
-      <div class="col-sm">
-          <fieldset>
-              <legend>Outros Dados (Legend)</legend>
-              <div class="row teste-row">
-                  <div class="col-md-6 mb-3">
-                      <div class="br-input">
-                          <label for="cpf">CPF</label>
-                          <input class="teste-input" id="cpf" value="Fulano (input preenchido)" type="text" />
-                      </div>
-                  </div>
-                  <div class="col-md-6 mb-3">
-                      <div class="br-input">
-                          <label for="something">Sei lá o que</label>
-                          <input class="teste-input" id="something" type="text" placeholder="Placeholder"/>
-                      </div>
-                  </div>
+              <div class="br-input">
+                <label for="valor-remessa">Valor da remessa 2</label>
+                <input class="total-remessa-mobile" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
               </div>
-          </fieldset>
+            </div>
+            <div class="coluna-input col-12 col-md-6 mb-3">
+              <div class="br-input">
+                <label for="valor-remessa">Valor da remessa 3</label>
+                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+              </div>  
+              <div class="br-input">
+                <label for="valor-remessa">Valor da remessa 4</label>
+                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+              </div>
+              <div class="br-input">
+                <label for="valor-remessa">Valor da remessa 5</label>
+                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+              </div> 
+              <div class="br-input">
+                <label for="valor-remessa">Valor da remessa 6</label>
+                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+              </div>  
+            </div>
+          </div>
+        </fieldset>
       </div>
-  </div>
-</div>
+    </div>
+  </template>
+  <div id="lista_remessas"></div>
+  <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+    <div class="menu-item divider" href="#" id="adicionar_remessa" role="treeitem">
+      <span class="icon" style="justify-content: right;">
+        <i class="fa fa-plus" aria-hidden="true"></i>
+      </span>
+      <span class="content"></span>
+    </div>
+  </button>
+  <button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
+    <div class="menu-item divider" href="#" id="remover_remessa" role="treeitem">
+      <span class="icon" style="justify-content: right;">
+        <i class="fa fa-minus" aria-hidden="true"></i>
+      </span>
+      <span class="content"></span>
+    </div>
+  </button>
+</fieldset>
+
