Diferenciando a ordenação dos blocos para mobile e desktop

--- a/src/html/remessas_internacionais/componentes/dados_remessas/dados_remessas.html
+++ b/src/html/remessas_internacionais/componentes/dados_remessas/dados_remessas.html
@@ -12,13 +12,13 @@
           <div class="row coluna-row">
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="valor-remessa">Valor da remessa</label>
+                <label for="valor-remessa-desktop">Valor da remessa</label>
                 <input class="valor-remessa-desktop" id="valor-remessa-desktop" placeholder="Dólar (US$)" type="text" />
               </div>  
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="valor-total-remessa">Alíquota</label>
+                <label for="aliquota-remessa-desktop">Alíquota</label>
                 <input class="aliquota-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>  
             </div>
@@ -31,13 +31,13 @@
           <div class="row coluna-row">
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="aliquota-remessa">II Inicial</label>
+                <label for="iiinicial-remessa-desktop">II Inicial</label>
                 <input class="iiinicial-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div> 
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="surname">Desconto</label>
+                <label for="desconto-remessa-desktop">Desconto</label>
                 <input class="desconto-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>
             </div>
@@ -56,7 +56,7 @@
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="surname">Soma</label>
+                <label for="soma-remessa-desktop">Soma</label>
                 <input class="soma-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>
             </div>
@@ -69,13 +69,13 @@
           <div class="row coluna-row">
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="aliquota-remessa">ICMS</label>
+                <label for="icms-remessa-desktop">ICMS</label>
                 <input class="icms-remessa-desktop" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="17%" disabled style="opacity: 1;">
               </div> 
             </div>
             <div class="coluna-input col-md-6 mb-3">
               <div class="br-input">
-                <label for="surname">Valor total</label>
+                <label for="total-remessa-desktop">Valor total</label>
                 <input class="total-remessa-desktop" id="total-remessa-desktop" type="text" placeholder="Dólar (US$)"/>
               </div>
             </div>
@@ -117,30 +117,38 @@
           <div class="row coluna-row">
             <div class="coluna-input col-12 col-md-6 mb-3">
               <div class="br-input">
-                <label class="titulo-bloco" for="valor-remessa">Valor da remessa 1</label>
-                <input class="valor-remessa-mobile" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label class="titulo-bloco" for="valor-remessa">Valor da remessa</label>
+                <input class="valor-remessa-mobile" id="valor-remessa-mobile" placeholder="Dólar (US$)" type="text" />
               </div>
               <div class="br-input">
-                <label for="valor-remessa">Valor da remessa 2</label>
-                <input class="total-remessa-mobile" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label for="valor-remessa">Total da remessa</label>
+                <input class="total-remessa-mobile" id="total-remessa-mobile" placeholder="Dólar (US$)" type="text" />
               </div>
             </div>
             <div class="coluna-input col-12 col-md-6 mb-3">
               <div class="br-input">
-                <label for="valor-remessa">Valor da remessa 3</label>
-                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label for="valor-remessa">Alíquota</label>
+                <input class="aliquota-remessa-mobile" id="aliquota-remessa-mobile" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>  
               <div class="br-input">
-                <label for="valor-remessa">Valor da remessa 4</label>
-                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label for="iiinicial-remessa-mobile">II Inicial</label>
+                <input class="iiinicial-remessa-mobile" id="iiinicial-remessa-mobile" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div>
               <div class="br-input">
-                <label for="valor-remessa">Valor da remessa 5</label>
-                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label for="desconto-remessa-mobile">Desconto</label>
+                <input class="desconto-remessa-mobile" id="desconto-remessa-mobile" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
               </div> 
               <div class="br-input">
-                <label for="valor-remessa">Valor da remessa 6</label>
-                <input class="input valor-remessa" id="valor-remessa" placeholder="Em dólar (US$)" type="text" />
+                <label for="iifinal-remessa-mobile">II Final</label>
+                <input class="iifinal-remessa-mobile" id="iifinal-remessa-mobile" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
+              </div> 
+              <div class="br-input">
+                <label for="soma-remessa-mobile">Soma</label>
+                <input class="soma-remessa-mobile" id="soma-remessa-mobile" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
+              </div>
+                <div class="br-input">
+                <label for="icms-remessa-mobile">ICMS</label>
+                <input class="icms-remessa-mobile" id="icms-remessa-mobile" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="17%" disabled style="opacity: 1;">
               </div>  
             </div>
           </div>
