--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -47,6 +47,20 @@
         </div>
       </main>
 
+      <div class="row">
+      <div class="col-md">
+          <div  class="card-content">
+            <div id="total-sum" class="total-sum">Total das remessas: US$ <span id="sum-value">0.00</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+     <!-- Botão flutuante -->
+      <button id="sum-btn" class="floating-btn">
+        <i class="fas fa-calculator"></i>
+      </button>
+
       <footer class="br-footer pt-3" id="footer">
         <div class="container-lg">
           <div class="info">
@@ -65,7 +79,7 @@
     <script src="./componentes/dados_remessas/dados_remessas.js" type="module"></script>
     <script src="./componentes/dados_passageiros/dados_passageiros.js" type="module"></script>
     <script src="./componentes/declaracao_saude/declaracao_saude.js" type="module"></script>
-    <script src="./js/popover.js" type="module"></script>
+    <script src="./js/main.js" type="module"></script>
     <script src="../bibliotecas/govbr-ds/core.js" type="module"></script>
     <script src="../bibliotecas/govbr-ds/core.min.js" type="module"></script>
 
