Separando CSS em arquivo separado; Usando Shadow Dom; Efeito de mudança de valor

--- a/src/html/remessas_internacionais/index.html
+++ b/src/html/remessas_internacionais/index.html
@@ -10,7 +10,7 @@
     <!-- Scripts de componentes -->
     <script src="./componentes/cabecalho/cabecalho.js" type="module"></script>
     <script src="./componentes/rodape/rodape.js" type="module"></script>
-    <script src="./componentes/dados_remessas/lista_remessas.js" type="module"></script>
+    <script src="./componentes/lista_remessas/lista_remessas.js" type="module"></script>
 
      <!-- Scripts da aplicação principal -->
      <script src="./js/main.js" type="module"></script>
@@ -21,10 +21,12 @@
 
 
     <!-- Font Rawline-->
-    <link
+    <!--link
     rel="stylesheet"
-    href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/>
-    <link rel="stylesheet" href="../bibliotecas/Fontes - Rawline/Rawline/"/>
+    href="../bibliotecas/govbr-ds-assets/fonts/rawline/css/rawline.css"/-->
+
+    <!-- TODO: não entendi adicionar um diretório como stylesheet 
+    <link rel="stylesheet" href="../bibliotecas/Fontes - Rawline/Rawline/"/-->
 
     <!-- Font Raleway-->
     <link
