aceitando com ou sem icms no cálculo

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -38,6 +38,14 @@
             <label for="iifinal-remessa">II Final</label>
             <input-animado class="iifinal-remessa" id="iifinal-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
           </div>
+          <div class="br-input" id="div_soma">
+            <label for="soma-remessa">Soma</label>
+            <input-animado class="soma-remessa" id="soma-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
+          </div>
+          <div class="br-input" id="div_icms">
+            <label for="icms-remessa">ICMS</label>
+            <input-animado class="icms-remessa" id="icms-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="17%" disabled style="opacity: 1;">
+          </div>  
           <!-- TODO: consertar botão agora que ta sem design system aqui -->
           <!--button class="br-button circle secondary small" type="button" aria-label="Ícone ilustrativo">
             <div class="menu-item divider" href="#" id="remover_remessa" role="treeitem">
@@ -47,16 +55,8 @@
               <span class="content"></span>
             </div>
           </button-->
-          <button id="btn_remover">Remover</button>
-          <!-- TODO: Por enquanto a parte do ICMS está desligada esperando definição dos Estados -->
-          <!--div class="br-input">
-            <label for="soma-remessa">Soma</label>
-            <input-animado class="soma-remessa" id="soma-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="US$ ?" disabled style="opacity: 1;">
-          </div>
-            <div class="br-input">
-            <label for="icms-remessa">ICMS</label>
-            <input-animado class="icms-remessa" id="icms-remessa" style="font-size: 15px;" type="text" contenteditable="true" required="true" value="17%" disabled style="opacity: 1;">
-          </div-->  
+          <button id="btn_remover">Remover</button>          
+          
         </div>
       </div>
     </fieldset>
