Transformar decimal da alíquota em porcentagem e informar que o desconto é um valor monetário (com US$ na frente)

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -14,7 +14,7 @@
         <div class="coluna-input col-12 col-md-6 mb-3">
           <div class="br-input">
             <label class="titulo-bloco" for="valor-remessa">Valor da remessa</label>
-            <input class="valor-remessa" id="valor-remessa" placeholder="Dólar (US$)" type="text" />            
+            <input class="valor-remessa" id="valor-remessa" placeholder="Reais R$" type="text" />            
           </div>
           <div class="br-input">
             <label for="valor-remessa">Total da remessa</label>
