Trocar título 'Total da remessa' -> 'Total da encomenda com impostos'

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.html
@@ -17,7 +17,7 @@
             <input class="valor-remessa" id="valor-remessa" placeholder="Reais R$" type="text" />            
           </div>
           <div class="br-input">
-            <label for="valor-remessa">Total da remessa</label>
+            <label for="valor-remessa">Total da encomenda com impostos</label>
             <input-animado class="total-remessa" id="total-remessa" placeholder="Dólar (US$)" type="text"/>
           </div>
         </div>
